# reviews_from_2gis

./: .env  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
source/: __init__.py  dao.py  get_all_reviews.py  html_fetcher.py  main.py  parser.py  url_normilizer.py
tests/: __init__.py  conftest.py  first_page.html  second_page.html  test_page.html  third_page.html
tests/integration_tests/: __init__.py  fetcher_tests.py
tests/unit_tests/: __init__.py  dao_tests.py  normiliser_tests.py  parser_tests.py
